set up for other models

--- a/Logistic Regression model.ipynb
+++ b/Logistic Regression model.ipynb
@@ -16,7 +16,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Outline-of-model\" data-toc-modified-id=\"Outline-of-model-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Outline of model</a></span></li><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Testing\" data-toc-modified-id=\"Testing-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Testing</a></span><ul class=\"toc-item\"><li><span><a href=\"#Creating-features/labels\" data-toc-modified-id=\"Creating-features/labels-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Creating features/labels</a></span></li><li><span><a href=\"#Training/validation/test-split\" data-toc-modified-id=\"Training/validation/test-split-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Training/validation/test split</a></span></li><li><span><a href=\"#Train-root-model-on-playground_set\" data-toc-modified-id=\"Train-root-model-on-playground_set-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Train root model on playground_set</a></span></li><li><span><a href=\"#Train-quality-model-on-playground-set\" data-toc-modified-id=\"Train-quality-model-on-playground-set-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Train quality model on playground set</a></span></li><li><span><a href=\"#Producing-labels-given-youtube-video\" data-toc-modified-id=\"Producing-labels-given-youtube-video-3.5\"><span class=\"toc-item-num\">3.5&nbsp;&nbsp;</span>Producing labels given youtube video</a></span></li><li><span><a href=\"#Plotting-learning-curves\" data-toc-modified-id=\"Plotting-learning-curves-3.6\"><span class=\"toc-item-num\">3.6&nbsp;&nbsp;</span>Plotting learning curves</a></span></li></ul></li><li><span><a href=\"#Building-the-model\" data-toc-modified-id=\"Building-the-model-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Building the model</a></span><ul class=\"toc-item\"><li><span><a href=\"#Setting-up-bash-commands\" data-toc-modified-id=\"Setting-up-bash-commands-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Setting up bash commands</a></span></li><li><span><a href=\"#Optimization\" data-toc-modified-id=\"Optimization-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Optimization</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Outline-of-model\" data-toc-modified-id=\"Outline-of-model-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Outline of model</a></span></li><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Testing\" data-toc-modified-id=\"Testing-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Testing</a></span><ul class=\"toc-item\"><li><span><a href=\"#Creating-features/labels\" data-toc-modified-id=\"Creating-features/labels-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Creating features/labels</a></span></li><li><span><a href=\"#Training/validation/test-split\" data-toc-modified-id=\"Training/validation/test-split-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Training/validation/test split</a></span></li><li><span><a href=\"#Train-root-model-on-playground_set\" data-toc-modified-id=\"Train-root-model-on-playground_set-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Train root model on playground_set</a></span></li><li><span><a href=\"#Train-quality-model-on-playground-set\" data-toc-modified-id=\"Train-quality-model-on-playground-set-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Train quality model on playground set</a></span></li><li><span><a href=\"#Producing-labels-given-youtube-video\" data-toc-modified-id=\"Producing-labels-given-youtube-video-3.5\"><span class=\"toc-item-num\">3.5&nbsp;&nbsp;</span>Producing labels given youtube video</a></span></li><li><span><a href=\"#Plotting-learning-curves\" data-toc-modified-id=\"Plotting-learning-curves-3.6\"><span class=\"toc-item-num\">3.6&nbsp;&nbsp;</span>Plotting learning curves</a></span></li></ul></li><li><span><a href=\"#Building-the-model\" data-toc-modified-id=\"Building-the-model-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Building the model</a></span><ul class=\"toc-item\"><li><span><a href=\"#Setting-up-bash-commands\" data-toc-modified-id=\"Setting-up-bash-commands-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Setting up bash commands</a></span></li><li><span><a href=\"#Optimization\" data-toc-modified-id=\"Optimization-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Optimization</a></span></li><li><span><a href=\"#Results\" data-toc-modified-id=\"Results-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Results</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -1415,7 +1415,7 @@
    "source": [
     "To optimize the L2 weight, I generate the following models:\n",
     "\n",
-    "```python lr_train.py full_lr full_1 --C 1.0 --weighted; python lr_train.py full_lr full_03 --C 0.3 --weighted; python lr_train.py full_lr full_01 --C 0.1 --weighted; python lr_train.py full_lr full_3 --C 3.0 --weighted; python lr_train.py full_lr full_10 --C 10.0 --weighted```"
+    "```python lr_train.py full_lr full_1 --C 1.0 ; python lr_train.py full_lr full_03 --C 0.3; python lr_train.py full_lr full_01 --C 0.1; python lr_train.py full_lr full_3 --C 3.0; python lr_train.py full_lr full_10 --C 10.0```"
    ]
   },
   {
@@ -1721,11 +1721,101 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T21:45:59.496683Z",
+     "start_time": "2019-09-24T21:45:59.490540Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[60438,     7,     9],\n",
+       "       [ 1542,     1,     1],\n",
+       "       [ 1111,     0,     7]])"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics[2]['inv_cmat_valid']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try without balanced weighting:\n",
-    "`python lr_train.py full_lr full_uw`"
+    "Try with balanced weighting:\n",
+    "`python lr_train.py full_lr lr_w --weighted`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T22:14:02.826791Z",
+     "start_time": "2019-09-24T22:14:02.755951Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'Models/lr_w.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-149-da674f0a870b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmetrics_w\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Models/lr_w.pkl\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Models/lr_w.pkl'"
+     ]
+    }
+   ],
+   "source": [
+    "metrics_w = pickle.load(open(\"Models/lr_w.pkl\", 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T22:15:09.043896Z",
+     "start_time": "2019-09-24T22:15:09.037819Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results without weighting\n",
+      "Root F1 score: 0.3966507946593213\n",
+      "Quality F1 score: 0.6490208158952907\n",
+      "Add F1 score: 0.672603894529484\n",
+      "Inversion F1 score: 0.937381395633498\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Results without weighting')\n",
+    "print(f\"Root F1 score: {metrics[2]['root_F1_valid']}\")\n",
+    "print(f\"Quality F1 score: {metrics[2]['quality_F1_valid']}\")\n",
+    "print(f\"Add F1 score: {metrics[2]['add_F1_valid']}\")\n",
+    "print(f\"Inversion F1 score: {metrics[2]['inv_F1_valid']}\")"
    ]
   },
   {
@@ -1733,7 +1823,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#to do later: include with weighting"
+   ]
   }
  ],
  "metadata": {
