try svm model, negative result

--- a/Logistic Regression model.ipynb
+++ b/Logistic Regression model.ipynb
@@ -16,7 +16,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Outline-of-model\" data-toc-modified-id=\"Outline-of-model-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Outline of model</a></span></li><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Testing\" data-toc-modified-id=\"Testing-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Testing</a></span><ul class=\"toc-item\"><li><span><a href=\"#Creating-features/labels\" data-toc-modified-id=\"Creating-features/labels-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Creating features/labels</a></span></li><li><span><a href=\"#Training/validation/test-split\" data-toc-modified-id=\"Training/validation/test-split-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Training/validation/test split</a></span></li><li><span><a href=\"#Train-root-model-on-playground_set\" data-toc-modified-id=\"Train-root-model-on-playground_set-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Train root model on playground_set</a></span></li><li><span><a href=\"#Train-quality-model-on-playground-set\" data-toc-modified-id=\"Train-quality-model-on-playground-set-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Train quality model on playground set</a></span></li><li><span><a href=\"#Producing-labels-given-youtube-video\" data-toc-modified-id=\"Producing-labels-given-youtube-video-3.5\"><span class=\"toc-item-num\">3.5&nbsp;&nbsp;</span>Producing labels given youtube video</a></span></li><li><span><a href=\"#Plotting-learning-curves\" data-toc-modified-id=\"Plotting-learning-curves-3.6\"><span class=\"toc-item-num\">3.6&nbsp;&nbsp;</span>Plotting learning curves</a></span></li></ul></li><li><span><a href=\"#Building-the-model\" data-toc-modified-id=\"Building-the-model-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Building the model</a></span><ul class=\"toc-item\"><li><span><a href=\"#Setting-up-bash-commands\" data-toc-modified-id=\"Setting-up-bash-commands-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Setting up bash commands</a></span></li><li><span><a href=\"#Optimization\" data-toc-modified-id=\"Optimization-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Optimization</a></span></li><li><span><a href=\"#With-balanced-weighting\" data-toc-modified-id=\"With-balanced-weighting-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>With balanced weighting</a></span></li><li><span><a href=\"#Results\" data-toc-modified-id=\"Results-4.4\"><span class=\"toc-item-num\">4.4&nbsp;&nbsp;</span>Results</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Outline-of-model\" data-toc-modified-id=\"Outline-of-model-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Outline of model</a></span></li><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Testing\" data-toc-modified-id=\"Testing-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Testing</a></span><ul class=\"toc-item\"><li><span><a href=\"#Creating-features/labels\" data-toc-modified-id=\"Creating-features/labels-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Creating features/labels</a></span></li><li><span><a href=\"#Training/validation/test-split\" data-toc-modified-id=\"Training/validation/test-split-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Training/validation/test split</a></span></li><li><span><a href=\"#Train-root-model-on-playground_set\" data-toc-modified-id=\"Train-root-model-on-playground_set-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Train root model on playground_set</a></span></li><li><span><a href=\"#Train-quality-model-on-playground-set\" data-toc-modified-id=\"Train-quality-model-on-playground-set-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Train quality model on playground set</a></span></li><li><span><a href=\"#Producing-labels-given-youtube-video\" data-toc-modified-id=\"Producing-labels-given-youtube-video-3.5\"><span class=\"toc-item-num\">3.5&nbsp;&nbsp;</span>Producing labels given youtube video</a></span></li><li><span><a href=\"#Plotting-learning-curves\" data-toc-modified-id=\"Plotting-learning-curves-3.6\"><span class=\"toc-item-num\">3.6&nbsp;&nbsp;</span>Plotting learning curves</a></span></li></ul></li><li><span><a href=\"#Building-the-model\" data-toc-modified-id=\"Building-the-model-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Building the model</a></span><ul class=\"toc-item\"><li><span><a href=\"#Setting-up-bash-commands\" data-toc-modified-id=\"Setting-up-bash-commands-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Setting up bash commands</a></span></li><li><span><a href=\"#Optimization\" data-toc-modified-id=\"Optimization-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Optimization</a></span></li><li><span><a href=\"#With-balanced-weighting\" data-toc-modified-id=\"With-balanced-weighting-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>With balanced weighting</a></span></li><li><span><a href=\"#Results\" data-toc-modified-id=\"Results-4.4\"><span class=\"toc-item-num\">4.4&nbsp;&nbsp;</span>Results</a></span></li></ul></li><li><span><a href=\"#Ad-hoc-metrics\" data-toc-modified-id=\"Ad-hoc-metrics-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Ad-hoc metrics</a></span><ul class=\"toc-item\"><li><span><a href=\"#Labeling-song-years\" data-toc-modified-id=\"Labeling-song-years-5.1\"><span class=\"toc-item-num\">5.1&nbsp;&nbsp;</span>Labeling song years</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -66,7 +66,7 @@
     "1. Total accuracy of all models\n",
     "1. Confusion matrices of each model\n",
     "1. Accuracy grouped by two other parameters:\n",
-    "    - difference between mp3 and video length\n",
+    "    - difference between mp3 and chord file length\n",
     "    - chart date of song (or release date for isophonics data)"
    ]
   },
@@ -1994,11 +1994,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 161,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T22:44:42.785899Z",
-     "start_time": "2019-09-24T22:44:42.779560Z"
+     "end_time": "2019-09-24T22:49:14.240438Z",
+     "start_time": "2019-09-24T22:49:14.233895Z"
     }
    },
    "outputs": [
@@ -2010,7 +2010,8 @@
       "Root F1 score: 0.38955497763112396\n",
       "Quality F1 score: 0.42230955816125526\n",
       "Add F1 score: 0.3835158750617886\n",
-      "Inversion F1 score: 0.7241362078130287\n"
+      "Inversion F1 score: 0.7241362078130287\n",
+      "Total accuracy: 0.07412832837415122\n"
      ]
     }
    ],
@@ -2021,6 +2022,34 @@
     "print(f\"Add F1 score: {metrics_w['add_F1_valid']}\")\n",
     "print(f\"Inversion F1 score: {metrics_w['inv_F1_valid']}\")\n",
     "print(f\"Total accuracy: {metrics_w['total_acc_valid']}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Later I'll show the metrics using the test data, but not until I settle on a model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ad-hoc metrics\n",
+    "Does the model perform worse for songs with large difference between mp3 and chord file length?\n",
+    "Does it perform differently for music released on different years?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T23:50:29.416695Z",
+     "start_time": "2019-09-24T23:50:29.407600Z"
+    }
+   },
+   "source": [
+    "### Labeling song years"
    ]
   },
   {
