--- a/Other models.ipynb
+++ b/Other models.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I'd like to try several other simple models included in sklearn.  SVM, Random Forest, and Hidden Markov seem like good places to start.  I will make copies of `lr_train.py` for each model.  In principle I could use a different model for each of root, quality, add, and inversion."
+    "I'd like to try several other simple models included in sklearn.  SVM, Random Forest, Hidden Markov, Gradient Boosting (lightgbm), multiclass module of sklearn seem like good places to start.  I will make copies of `lr_train.py` for each model.  In principle I could use a different model for each of root, quality, add, and inversion."
    ]
   },
   {
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T21:55:48.966853Z",
-     "start_time": "2019-09-24T21:55:46.365299Z"
+     "end_time": "2019-09-24T23:46:52.898215Z",
+     "start_time": "2019-09-24T23:46:52.884408Z"
     }
    },
    "outputs": [],
@@ -42,6 +42,8 @@
     "import sklearn\n",
     "import re\n",
     "import pickle\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "if 'chord_loader' in sys.modules:\n",
     "    del sys.modules['chord_loader']\n",
@@ -93,7 +95,180 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Baseline: logistic regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I've trained a logistic regression model already, but I'll train it in this specific setting just to get a baseline for comparison."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T23:48:02.572826Z",
+     "start_time": "2019-09-24T23:46:57.743228Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight='balanced', dual=False,\n",
+       "                   fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
+       "                   max_iter=1000, multi_class='ovr', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root_model = LogisticRegression(class_weight='balanced',multi_class='ovr',C=1.0,\n",
+    "                                                    solver='lbfgs', max_iter=1000)\n",
+    "root_model.fit(features_train, labels_train[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root_predict_train = root_model.predict(features_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T23:41:55.999562Z",
+     "start_time": "2019-09-24T23:41:55.970225Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0361722590297072"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sklearn.metrics.accuracy_score(labels_train[:,0],root_predict_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T22:31:36.074349Z",
+     "start_time": "2019-09-24T22:20:04.940570Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/envs/insight/lib/python3.7/site-packages/sklearn/svm/base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n",
+      "/anaconda3/envs/insight/lib/python3.7/site-packages/sklearn/svm/base.py:241: ConvergenceWarning: Solver terminated early (max_iter=1000).  Consider pre-processing your data with StandardScaler or MinMaxScaler.\n",
+      "  % self.max_iter, ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight='balanced', coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "    kernel='rbf', max_iter=1000, probability=False, random_state=None,\n",
+       "    shrinking=True, tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Make sure function behaves like I expect\n",
+    "root_model = SVC(class_weight='balanced',decision_function_shape='ovr',C=1.0, max_iter=1000)\n",
+    "root_model.fit(features_train, labels_train[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T23:33:02.984250Z",
+     "start_time": "2019-09-24T22:51:43.737275Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "root_predict_train = root_model.predict(features_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T23:41:55.999562Z",
+     "start_time": "2019-09-24T23:41:55.970225Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0361722590297072"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sklearn.metrics.accuracy_score(labels_train[:,0],root_predict_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "11 minutes to train, 40 minutes to just make a prediction, and 4% accuracy!  Maybe SVM is bad for this problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gradient Boosting"
    ]
   },
   {
