testing random forest

--- a/Other models.ipynb
+++ b/Other models.ipynb
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T23:46:52.898215Z",
-     "start_time": "2019-09-24T23:46:52.884408Z"
+     "end_time": "2019-09-25T00:09:48.613503Z",
+     "start_time": "2019-09-25T00:09:48.495433Z"
     }
    },
    "outputs": [],
@@ -44,6 +44,7 @@
     "import pickle\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "if 'chord_loader' in sys.modules:\n",
     "    del sys.modules['chord_loader']\n",
@@ -138,8 +139,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T23:51:41.771109Z",
+     "start_time": "2019-09-24T23:51:41.517838Z"
+    }
+   },
    "outputs": [],
    "source": [
     "root_predict_train = root_model.predict(features_train)"
@@ -147,27 +153,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T23:41:55.999562Z",
-     "start_time": "2019-09-24T23:41:55.970225Z"
+     "end_time": "2019-09-24T23:51:42.475811Z",
+     "start_time": "2019-09-24T23:51:42.413788Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0361722590297072"
+       "0.3485297784426872"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sklearn.metrics.accuracy_score(labels_train[:,0],root_predict_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1 minute to train, 35% accuracy.  Adequate"
    ]
   },
   {
@@ -268,7 +281,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gradient Boosting"
+    "## Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-25T00:14:44.845569Z",
+     "start_time": "2019-09-25T00:09:50.687101Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "                       max_depth=None, max_features='sqrt', max_leaf_nodes=None,\n",
+       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                       min_weight_fraction_leaf=0.0, n_estimators=100,\n",
+       "                       n_jobs=None, oob_score=False, random_state=None,\n",
+       "                       verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root_model = RandomForestClassifier(n_estimators=100,max_features='sqrt',class_weight=None)\n",
+    "root_model.fit(features_train, labels_train[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-25T00:18:55.022124Z",
+     "start_time": "2019-09-25T00:18:43.082439Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "root_predict_train = root_model.predict(features_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-25T00:18:58.363381Z",
+     "start_time": "2019-09-25T00:18:58.325088Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.995672152169267"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sklearn.metrics.accuracy_score(labels_train[:,0],root_predict_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-25T00:33:32.523349Z",
+     "start_time": "2019-09-25T00:33:31.798185Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3724286152901443"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#let's try that again on the validation set\n",
+    "root_predict_valid = root_model.predict(features_valid)\n",
+    "sklearn.metrics.accuracy_score(labels_valid[:,0],root_predict_valid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's obviously in the high variance regime, but that might improve as I add more data.  This one is worth trying."
    ]
   },
   {
@@ -276,7 +394,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "`source destination [--weighted --num num_estimators --frac fraction --metrics]`"
+   ]
   }
  ],
  "metadata": {
