small bug fix in rf_train

--- a/Other models.ipynb
+++ b/Other models.ipynb
@@ -390,13 +390,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-25T00:35:23.728462Z",
+     "start_time": "2019-09-25T00:35:23.718009Z"
+    }
+   },
+   "source": [
+    "`python rf_train.py full_lr rf100 --num 100`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "`source destination [--weighted --num num_estimators --frac fraction --metrics]`"
-   ]
+   "source": []
   }
  ],
  "metadata": {
