add max depth for random forest

--- a/Other models.ipynb
+++ b/Other models.ipynb
@@ -398,7 +398,21 @@
     }
    },
    "source": [
-    "`python rf_train.py full_lr rf100 --num 100`"
+    "`python rf_train.py full_lr rf100 --num 100 --depth 20`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Without any maximum depth, each tree takes 250 MB, which is prohibitive. Currently testing a maximum depth."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hidden Markov"
    ]
   },
   {
