try random forest

--- a/Other models.ipynb
+++ b/Other models.ipynb
@@ -398,21 +398,128 @@
     }
    },
    "source": [
-    "`python rf_train.py full_lr rf100 --num 100 --depth 20`"
+    "`python rf_train.py full_lr rf100 --num 100 --depth 15`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Without any maximum depth, each tree takes 250 MB, which is prohibitive. Currently testing a maximum depth."
+    "Without any maximum depth, each tree takes 250 MB, which is prohibitive. Currently testing a maximum depth.  At depth 15, it only takes 8 MB per tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-25T16:36:01.486502Z",
+     "start_time": "2019-09-25T16:36:01.441557Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "metrics = pickle.load(open(\"Models/rf100_metrics.pkl\", 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-25T16:38:41.623825Z",
+     "start_time": "2019-09-25T16:38:41.617181Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root F1 score: 0.39229078171883525\n",
+      "Quality F1 score: 0.6361815109707816\n",
+      "Add F1 score: 0.6700417121123365\n",
+      "Inversion F1 score: 0.9372211221390009\n",
+      "Total accuracy: 0.23050278477149616\n"
+     ]
+    }
+   ],
+   "source": [
+    "#without weighting\n",
+    "print(f\"Root F1 score: {metrics['root_F1_valid']}\")\n",
+    "print(f\"Quality F1 score: {metrics['quality_F1_valid']}\")\n",
+    "print(f\"Add F1 score: {metrics['add_F1_valid']}\")\n",
+    "print(f\"Inversion F1 score: {metrics['inv_F1_valid']}\")\n",
+    "print(f\"Total accuracy: {metrics['total_acc_valid']}\")\n",
+    "#it performs slightly worse than logistic regression on each measure"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hidden Markov"
+    "Without weighting, it performs very similarly to logistic regression.  I think this might be because in either model, it's mostly just predicting the common class."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`python rf_train.py full_lr rf100w --weighted --num 100 --depth 15`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-25T20:04:19.298199Z",
+     "start_time": "2019-09-25T20:04:19.281470Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "metricsw = pickle.load(open(\"Models/rf100w_metrics.pkl\", 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-25T20:06:23.794074Z",
+     "start_time": "2019-09-25T20:06:23.787442Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root F1 score: 0.3877600988680455\n",
+      "Quality F1 score: 0.6513733965117582\n",
+      "Add F1 score: 0.6590535491232389\n",
+      "Inversion F1 score: 0.9267973410028639\n",
+      "Total accuracy: 0.20070191500724804\n"
+     ]
+    }
+   ],
+   "source": [
+    "#without weighting\n",
+    "print(f\"Root F1 score: {metricsw['root_F1_valid']}\")\n",
+    "print(f\"Quality F1 score: {metricsw['quality_F1_valid']}\")\n",
+    "print(f\"Add F1 score: {metricsw['add_F1_valid']}\")\n",
+    "print(f\"Inversion F1 score: {metricsw['inv_F1_valid']}\")\n",
+    "print(f\"Total accuracy: {metricsw['total_acc_valid']}\")\n",
+    "#it performs slightly worse than logistic regression on each measure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This seems to perform very slightly better than (unweighted) logistic regression for quality, which I think is an improvement?  But a very small improvement"
    ]
   },
   {
