some initial xgb testing

--- a/Other models.ipynb
+++ b/Other models.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I'd like to try several other simple models included in sklearn.  SVM, Random Forest, Hidden Markov, Gradient Boosting (lightgbm), multiclass module of sklearn seem like good places to start.  I will make copies of `lr_train.py` for each model.  In principle I could use a different model for each of root, quality, add, and inversion."
+    "I'd like to try several other simple models included in sklearn.  SVM, Random Forest, Gradient Boosting (xgb), seem like good places to start.  I will make copies of `lr_train.py` for each model.  In principle I could use a different model for each of root, quality, add, and inversion."
    ]
   },
   {
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-25T00:09:48.613503Z",
-     "start_time": "2019-09-25T00:09:48.495433Z"
+     "end_time": "2019-09-25T21:20:31.506689Z",
+     "start_time": "2019-09-25T21:20:28.543297Z"
     }
    },
    "outputs": [],
@@ -45,6 +45,8 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "import xgboost as xgb\n",
+    "import sklearn\n",
     "\n",
     "if 'chord_loader' in sys.modules:\n",
     "    del sys.modules['chord_loader']\n",
@@ -57,8 +59,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T22:11:40.684930Z",
-     "start_time": "2019-09-24T22:11:40.380127Z"
+     "end_time": "2019-09-25T21:20:31.735541Z",
+     "start_time": "2019-09-25T21:20:31.508682Z"
     }
    },
    "outputs": [],
@@ -520,6 +522,84 @@
    "metadata": {},
    "source": [
     "This seems to perform very slightly better than (unweighted) logistic regression for quality, which I think is an improvement?  But a very small improvement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XGBoosting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-25T21:53:11.826056Z",
+     "start_time": "2019-09-25T21:53:11.812244Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "model_options = {'max_depth': 4,\n",
+    "                 'learning_rate': 0.1,\n",
+    "                 'n_estimators':5,\n",
+    "                 'n_jobs':4\n",
+    "                        }\n",
+    "root_model = xgb.XGBClassifier(**model_options)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-09-25T21:53:13.216Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "root_model.fit(features_train, labels_train[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-25T21:35:13.138061Z",
+     "start_time": "2019-09-25T21:35:08.477646Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "root_predict_train = root_model.predict(features_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-25T21:35:13.171014Z",
+     "start_time": "2019-09-25T21:35:13.139930Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2948457647645508"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sklearn.metrics.accuracy_score(labels_train[:,0],root_predict_train)"
    ]
   },
   {
